--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Green Blue Site</title>
+    <title>Angular Training App</title>
     <link rel="STYLESHEET" href="shared/styles/style.css" type="text/css">
 
 </head>
@@ -17,7 +17,7 @@
             <ul>
 
                 <li><a ui-sref="#">Dashboard</a></li>
-                <li><a ui-sref="#">Customer</a></li>
+                <li><a ui-sref="customer">Customer</a></li>
                 <li><a ui-sref="#">Daily Status</a></li>
                 <li><a ui-sref="#">Vacation</a></li>
             </ul>
@@ -42,6 +42,7 @@
     <!-- Modules -->
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="controllers/Customer.js"></script>
     <!-- Controllers -->
 
    
