--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Green Blue Site</title>
-    <link rel="STYLESHEET" href="shared/styles/style.css" type="text/css">
+    <title>Angular Training App</title>
+
+    <link rel="stylesheet" href="shared/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="shared/styles/vacation.css" type="text/css">
 
 </head>
 <body ng-app="angularApp">
@@ -11,28 +13,25 @@
     <div id="header">
         <h1>Angular Training App</h1>
     </div>
+    
+        <div id="nav">
+            <div class="menu">
+                <ul>
 
-    <div id="nav">
-        <div class="menu">
-            <ul>
+                    <li><a ui-sref="#">Dashboard</a></li>
+                    <li><a ui-sref="#">Customer</a></li>
+                    <li><a ui-sref="#">Daily Status</a></li>
+                    <li><a ui-sref="vacation">Vacation</a></li>
+                </ul>
+            </div>
 
-                <li><a ui-sref="#">Dashboard</a></li>
-                <li><a ui-sref="#">Customer</a></li>
-                <li><a ui-sref="#">Daily Status</a></li>
-                <li><a ui-sref="#">Vacation</a></li>
-            </ul>
         </div>
-        <!--<a ui-sref="#">Dashboard</a>
-        <a ui-sref="#">Customer</a>
-        <a ui-sref="#">Daily Status</a>
-        <a ui-sref="#">Vacation</a>-->
-    </div>
 
-    <div id="section">
-        <div ui-view></div>
+        <div id="section">
+            <div ui-view></div>
 
-    </div>
-
+        </div>
+    
     <div id="footer">
         Copyright © AngularTraning
     </div>
@@ -43,8 +42,8 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <!-- Controllers -->
+    <script src="/controllers/VacationController.js"></script>
 
-   
 
 </body>
 </html>
