--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
     <div id="header">
         <h1>Angular Training App</h1>
     </div>
+    <div id="middle">
+        <div id="nav">
+            <div class="menu">
+                <ul>
 
-    <div id="nav">
-        <div class="menu">
-            <ul>
-
-                <li><a ui-sref="#">Dashboard</a></li>
-                <li><a ui-sref="customer">Customer</a></li>
-                <li><a ui-sref="dailystatus">Daily Status</a></li>
-                <li><a ui-sref="#">Vacation</a></li>
-            </ul>
+                    <li><a ui-sref="#">Dashboard</a></li>
+                    <li><a ui-sref="customer">Customer</a></li>
+                    <li><a ui-sref="dailystatus">Daily Status</a></li>
+                    <li><a ui-sref="#">Vacation</a></li>
+                </ul>
+            </div>
+            <!--<a ui-sref="#">Dashboard</a>
+            <a ui-sref="#">Customer</a>
+            <a ui-sref="#">Daily Status</a>
+            <a ui-sref="#">Vacation</a>-->
         </div>
-        <!--<a ui-sref="#">Dashboard</a>
-        <a ui-sref="#">Customer</a>
-        <a ui-sref="#">Daily Status</a>
-        <a ui-sref="#">Vacation</a>-->
+
+        <div id="section">
+            <div ui-view></div>
+
+        </div>
     </div>
-
-    <div id="section">
-        <div ui-view></div>
-
-    </div>
-
     <div id="footer">
-        Copyright © AngularTraning
+        <p> Copyright © AngularTraning</p>
+       
     </div>
     <script src="libraries/Angular.min.js"></script>
     <!--<script src="/libraries/angular-route.min.js"></script>-->
