--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Angular Training App</title>
 
     <link rel="stylesheet" href="shared/styles/style.css" type="text/css">
-
-    <link rel="stylesheet" href="shared/styles/vacation.css" type="text/css">
+   
     <link rel="stylesheet" href="shared/styles/datepicker.css" type="text/css">
     <script src="/libraries/jquery-1.11.2.min.js"></script>
     <script src="/libraries/moment.min.js"></script>
@@ -14,49 +13,55 @@
     <script src="/libraries/datepicker.js"></script>
 </head>
 <body ng-app="angularApp" >
-
-    <div id="header" >
-        <h1>Angular Training App</h1>
-        <div class="welcome" ng-show="showUser"><span >Welcome&nbsp;{{userName}}!</span>
-        <a href="#" >Sign Out</a></div>
-    </div>
-    <div id="middle">
-        <div id="nav" ng-show="sidebar">
-            <div class="menu">
-                <ul>
-                    <li><a ui-sref="#">Dashboard</a></li>
-                    <li><a ui-sref="customer">Customer</a></li>
-                    <li><a ui-sref="dailystatus">Daily Status</a></li>
-                    <li><a ui-sref="vacation">Vacation</a></li>
-                </ul>
+    <div id="container">
+        <div id="header">
+            <h1>Angular Training App</h1>
+            <div class="welcome" ng-show="showUser">
+                <span>Welcome&nbsp;{{userName}}!</span>
+                <a href="#">Sign Out</a>
             </div>
         </div>
 
-        <div id="section">
-            <div ui-view></div>
+        <div id="middle">
+            <div id="nav" ng-show="sidebar">
+                <div class="menu">
+                    <ul>
+                        <li><a ui-sref="#">Dashboard</a></li>
+                        <li><a ui-sref="customer">Customer</a></li>
+                        <li><a ui-sref="dailystatus">Daily Status</a></li>
+                        <li><a ui-sref="vacation">Vacation</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="section">
+                <div ui-view></div>
+
+            </div>
+
+            <div id="footer">
+                <p> Copyright © AngularTraning</p>
+
+            </div>
 
         </div>
-    </div>
-    <div id="footer">
-        <p> Copyright © AngularTraning</p>
-       
-    </div>
+        </div>
 
-    <script src="/libraries/Angular.min.js"></script>
-    
-    <script src="/libraries/angular-ui-router.min.js"></script>
+        <script src="/libraries/Angular.min.js"></script>
 
-    <!-- Modules -->
-    <script src="app.js"></script>
-    <script src="config.js"></script>
-    <!-- Controllers -->
-    <script src="controllers/DashboardController.js"></script>   
-    <script src="/controllers/VacationController.js"></script>
-    <script src="controllers/Customer.js"></script>
-    <script src="controllers/DailyStatusController.js"></script>
-    <script src="controllers/LoginController.js"></script>
-    <!-- Services -->
-    <script src="services/LoginService.js"></script>
-    <script src="services/LogoutService.js"></script>
+        <script src="/libraries/angular-ui-router.min.js"></script>
+
+        <!-- Modules -->
+        <script src="app.js"></script>
+        <script src="config.js"></script>
+        <!-- Controllers -->
+        <script src="controllers/DashboardController.js"></script>
+        <script src="/controllers/VacationController.js"></script>
+        <script src="controllers/Customer.js"></script>
+        <script src="controllers/DailyStatusController.js"></script>
+        <script src="controllers/LoginController.js"></script>
+        <!-- Services -->
+        <script src="services/LoginService.js"></script>
+        <script src="services/LogoutService.js"></script>
 </body>
 </html>
