Log out function completed

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
 
     <div id="header" ng-controller="HeaderController">
         <h1>Angular Training App</h1>
-        <div class="welcome" ng-show="showUser"><span >Welcome&nbsp;{{userName}}!</span>
+        <div class="welcome" ng-style="showUser"><span >Welcome&nbsp;{{userName}}!</span>
         <a href="#" ng-click="logout()">Sign Out</a></div>
     </div>
 
-    <div id="middle">
-       
-
+    <div id="middle" ng-style="bodybackground">
        
             <div id="nav" ng-show="sidebar">
                 <div class="menu">
