--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
     <link rel="stylesheet" href="shared/styles/datepicker.css" type="text/css">
     <script src="/libraries/jquery-1.11.2.min.js"></script>
-    <script src="../libraries/moment.min.js"></script>
+    <script src="./libraries/moment.min.js"></script>
     <script src="/libraries/Angular.min.js"></script>
     <script src="/libraries/datepicker.js"></script>
 </head>
