Added Json service

--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
     <!-- Services -->
     <script src="services/LoginService.js"></script>
     <script src="services/LogoutService.js"></script>
-
+    <script src="services/JSONService.js"></script>
 </body>
 </html>
