Added dashboard state in ui-sref

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="nav" ng-show="sidebar">
                 <div class="menu">
                     <ul>
-                        <li><a ui-sref="#">Dashboard</a></li>
+                        <li><a ui-sref="dashboard">Dashboard</a></li>
                         <li><a ui-sref="customer">Customer</a></li>
                         <li><a ui-sref="dailystatus">Daily Status</a></li>
                         <li><a ui-sref="vacation">Vacation</a></li>
