--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script src="./services/LoginService.js"></script>
     <script src="./services/LogoutService.js"></script>
     <script src="./services/JSONService.js"></script>
+    <script src="./services/UtilService.js"></script>
 
     <!-- Controllers -->
     <script src="./controllers/DashboardController.js"></script>   
