--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
     
     <script src="./libraries/angular-ui-router.min.js"></script>
+    <script src="./libraries/angular-cookies.min.js"></script>
 
     <!-- Modules -->
     <script src="./app.js"></script>
